# rust-file-encryptor

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: encryption.rs  file.rs  lib.rs  main.rs  meta.rs
src/app/: context.rs
src/cipher/: mod.rs
src/cipher/kind/: aesgcm.rs  chacha20.rs  mod.rs
src/cli/: mod.rs
src/cli/args/: mod.rs
src/cli/runtime/: command.rs  confirm.rs  key.rs  mod.rs  util.rs  vec_limit.rs
src/error/: macros.rs  mod.rs  tests.rs
src/meta/: mod.rs  tests.rs
src/meta/enc/: tests.rs
src/meta/error/: mod.rs
src/meta/header/: mod.rs  tests.rs
src/meta/raw/: mod.rs  tests.rs
src/meta_enc/: mod.rs  tests.rs
src/meta_enc/parser/: mod.rs  tests.rs
src/meta_raw/: mod.rs  tests.rs
src/meta_raw/parser/: mod.rs  tests.rs
src/utils/: mod.rs
tests/: general_test.rs
tests/general/: encrypt_test.rs  to_enc_large.txt
