[package]
name = "rust-file-encryptor"
version = "0.1.0"
authors = ["OzoNeTT <gpoff12@mail.ru>", "Anatolii Titov <a@toliak.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
aes-gcm-siv = "0.10.3"
chacha20poly1305 = { version="0.9.0", features=["stream"] }
anyhow = "1.0.57"
rand = "0.8.5"
log = "0.4.17"
pretty_env_logger = "0.4.0"
arrayref = "0.3.6"
sha2 = "0.10.2"
sha256 = "1.0.3"
hex-literal = "0.3.4"