[package]
name = "file_encryptor"
version = "0.2.0"
authors = ["OzoNeTT <gpoff12@mail.ru>", "Anatolii Titov <a@toliak.ru>"]
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
aes-gcm-siv = "0.10.3"
chacha20poly1305 = { version="0.9.0", features=["stream", "std"] }
anyhow = "1.0.57"
rand = "0.8.5"
log = "0.4.17"
pretty_env_logger = "0.4.0"
arrayref = "0.3.6"
sha2 = "0.10.2"
sha256 = "1.0.3"
hex-literal = "0.3.4"
rpassword = "6.0.1"
assert_fs = "0.10"
path-absolutize = "3.0.13"
console = "0.15.2"
ctrlc = "3.2.4"
